--- a/themes/design.css
+++ b/themes/design.css
@@ -20,7 +20,8 @@ section {
 
 h1 {
     font-size: 3em;
-    font-weight: bolder;    
+    font-weight: bolder;        
+    text-align: center;
 }
 
 h2 {
@@ -37,7 +38,7 @@ h3 {
 /*Centralizar título*/
 section:has(h1) {
     justify-content: center;
-    align-items: center;
+    align-items: center;    
 }
 
 section:has(h2) {
@@ -98,4 +99,21 @@ td > strong {
 td > em {
     color: red;
     font-weight: bold;
+}
+
+
+/* Regras para Figura com Legenda */
+div.wrapper {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 0;
+    align-items: center;
+}
+
+div.wrapper p {
+    font-size: 18px;
+}
+
+div.wrapper p:has(a) {
+    font-weight: bolder;
 }
