Aula sobre protocolo http

--- a/themes/design.css
+++ b/themes/design.css
@@ -114,6 +114,31 @@ div.wrapper p {
     font-size: 18px;
 }
 
-div.wrapper p:has(a) {
+div.wrapper p {
     font-weight: bolder;
+}
+
+p.nota:before {
+    content: "\00270D ";
+    width: 40px;
+    height: 40px;
+    position: absolute;   
+    top: -27px;
+    left: -13px;
+    transform: rotate(-30deg) scale(1.5);
+}
+
+p.nota {
+    position: relative;
+    background-color: rgb(244, 244, 186);
+    padding: 5px 10px; 
+    font-size: 20px; 
+    width: 350px;
+    text-align: justify;
+    border: 1px solid rgb(112, 112, 112);
+    border-radius: 5px;
+}
+
+p.nota a::before {
+    content: "\01F517 ";
 }
