--- a/slides/js/04/exemplos/exercicio.css
+++ b/slides/js/04/exemplos/exercicio.css
@@ -14,6 +14,13 @@ body > h1 {
     font-size: 3em;
 }
 
+.tipo-objeto, .criar-objeto {
+    border: 1px solid grey;
+    margin: 0 auto;
+    width: 80%;
+    padding: 20px 0;
+}
+
 .tipo-objeto {
     display: flex;
     flex-flow: column nowrap;
@@ -42,6 +49,27 @@ body > h1 {
     background-color: rgb(41, 255, 41);
 }
 
-.criar-objeto form {
+.criar-objeto {
     display: none;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
+.criar-objeto form {
+    display: flex;    
+}
+
+.group {
+    display: flex;
+    gap: 10px;
+    align-items: center;  
+}
+
+.group input {
+    flex: 1;    
+    align-self: center;
+    justify-self: center;
+    padding: 10px;
+    font-size: 1em;
+
 }
